# scalar

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: emails.json
env/: __init__.py  environment.py  graders.py  models.py  reward.py  tasks.py
server/: app.py
